--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "dependencies": {
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
+    "iscroll": "^5.2.0",
     "lib-flexible": "^0.3.2",
     "vant": "^2.10.5",
     "vue": "^2.6.11",
+    "vue-iscroll-view": "^1.0.3",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
