--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vant": "^2.10.5",
     "vue": "^2.6.11",
     "vue-iscroll-view": "^1.0.3",
+    "vue-lazyload": "^1.3.3",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
